fix(jumbo link icon): fixed IE11 bug on last icon size bug on IE11

--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -3741,6 +3741,7 @@ input:focus {
 
 .e-link.e-link--jumbo .e-link__icon:last-of-type {
   margin-left: 11px;
+  display: inline-block;
 }
 
 .e-link.e-link--jumbo .e-link__icon:last-of-type i {
